--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-typescript-starter",
-  "homepage": "https://multi-agent-drone-systems-inc.github.io/multiagentdronesystems.com",
+  "homepage": "https://mads-computer.github.io/webby",
   "private": true,
   "version": "0.0.0",
   "type": "module",
